# lance-2026

./: .gitignore  .gitmodules  README.md  build.sh  cyclonedds.xml  foxglove_layout.json  num_lines.sh  run.sh  sync.sh
.github/docker/: Dockerfile
.github/workflows/: ros-ci.yaml
lance/: CMakeLists.txt  CONTROLS.md  LICENSE  package.xml
lance/config/: lance.json  perception.json  robot_tf.json  tf.json
lance/launch/: lance.launch.py
lance/src/: control_node.cpp  motor_sim.cpp  watchdog_node.cpp
lance/src/robot/: collection_state.cpp  collection_state.hpp  hid_bindings.hpp  hid_constants.hpp  motor_interface.hpp  robot_controller.cpp  robot_controller.hpp  robot_math.hpp  robot_params.cpp  robot_params.hpp
lance/src/robot/controllers/: auto_controller.cpp  auto_controller.hpp  auto_mining_controller.cpp  auto_mining_controller.hpp  auto_offload_controller.cpp  auto_offload_controller.hpp  localization_controller.cpp  localization_controller.hpp  mining_controller.cpp  mining_controller.hpp  offload_controller.cpp  offload_controller.hpp  teleop_controller.cpp  teleop_controller.hpp  traversal_controller.cpp  traversal_controller.hpp
lance/src/util/: joy_utils.hpp  ros_utils.hpp
net-adapter/: CMakeLists.txt  package.xml  zenoh_install.sh
net-adapter/src/: client_adapter.cpp  client_endpoint.cpp  mem_helpers.hpp  robot_adapter.cpp  robot_endpoint.cpp  ros_utils.hpp  zenoh_utils.hpp
net-adapter/src/adapters/: base_adapter.hpp  joy_adapter.cpp  joy_adapter.hpp  mem_helpers.hpp  ms136_imu_adapter.cpp  ms136_imu_adapter.hpp  ms136_scan_adapter.cpp  ms136_scan_adapter.hpp
phoenix-driver/: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
phoenix-driver/launch/: phx5.launch.py  phx6.launch.py
phoenix-driver/msg/: TalonCtrl.msg  TalonFaults.msg  TalonInfo.msg
phoenix-driver/scripts/: can_bringup.sh  can_bringup_old.sh  can_shutdown.sh  detect_arduino.sh  launch_phoenix5_standalone.sh  launch_phoenix6_standalone.sh  upload_arduino.sh
phoenix-driver/src/: arduino_motor_reset.ino  motor_sim.cpp  phx5_driver.cpp  phx5_utils.hpp  phx6_driver.cpp  phx6_driver2.cpp  phx6_utils2.hpp
phoenix-driver/src/arduino_motor_reset/: arduino_motor_reset.ino
